<resources>
    <string name="app_name">TestUsernameApplication</string>
    <string name="registration">Registration</string>
    <string name="register">Register</string>
    <string name="user_information">Get user information</string>
    <string name="username">Username</string>
    <string name="first_name">First name</string>
    <string name="second_name">Last name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone number</string>
    <string name="status">Status</string>
    <string name="find_user">Find user</string>
</resources>