<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/username"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/username"/>

        <EditText
            android:id="@+id/firstName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/first_name"/>

        <EditText
            android:id="@+id/secondName"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/second_name"/>

        <EditText
            android:id="@+id/email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/password"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>

        <EditText
            android:id="@+id/phone"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:inputType="phone"
            android:hint="@string/phone"/>

        <EditText
            android:id="@+id/status"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="8dp"
            android:inputType="number"
            android:hint="@string/status"/>

        <Button
            android:id="@+id/registerBtn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:text="@string/register"/>

    </LinearLayout>

</ScrollView>